# wifidog

./: Makefile.am  aclocal.m4  configure.in  wifidog.conf
config/: config.guess  config.sub  depcomp  install-sh  ltmain.sh  missing
scripts/init.d/: wifidog
src/: Makefile.am  auth.c  auth.h  centralserver.c  centralserver.h  client_list.c  client_list.h  commandline.c  conf.c  conf.h  fw.c  fw.h  gateway.c  queue.c  queue.h  safe.c  util.c  util.h  wdctl.c  wdctl.h  wdctl_thread.c
